changes and fixed

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -76,6 +76,7 @@ nav .navbar-collapse .navbar-nav .nav-link {
   padding-left: 1rem;
   -webkit-transition: color .2s ease;
   transition: color .2s ease;
+  padding: 0.4rem 1rem;
 }
 
 nav .navbar-collapse .navbar-nav .nav-link:hover {
@@ -83,28 +84,20 @@ nav .navbar-collapse .navbar-nav .nav-link:hover {
 }
 
 nav .navbar-collapse .navbar-nav .nav-button {
+  width: 110px;
   color: #ff0024;
   background-color: #f2f2f221;
   font-weight: 600;
   border-radius: 30px;
-  margin-left: 1.5rem;
-  margin-right: 0.5rem;
 }
 
 nav .navbar-collapse .navbar-nav .nav-button:hover {
   color: #7a3c9e;
 }
 
-.navbar-expand-lg .navbar-nav .nav-link .active {
-  color: #7a3c9e;
-}
-
 .navbar-dark .navbar-toggler {
   color: transparent;
   border-color: transparent;
-}
-
-.navbar-toggler {
   font-size: 1.5rem;
 }
 
@@ -116,14 +109,34 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 }
 
 /* INICIO */
-.bannerInicio {
+.bannerinicio {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, black), color-stop(70%, rgba(0, 0, 0, 0))), url(../media/banner/bannerInicio.png);
   background: linear-gradient(black 1%, rgba(0, 0, 0, 0) 70%), url(../media/banner/bannerInicio.png);
-  height: 100vh;
+  height: 92.7vh;
   background-position: center;
   background-size: cover;
   -webkit-filter: grayscale(20%);
           filter: grayscale(20%);
+}
+
+.bannerinicio__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  padding-top: 70vh;
+  padding-right: 10vh;
+}
+
+.bannerinicio__container .bannerinicio__title {
+  font-size: 10em;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  color: #dcd1d6;
+  margin-right: 2vh;
 }
 
 .containerinicio {
@@ -195,7 +208,7 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 }
 
 .containerinicio .containerinicio__text .containerinicio__p {
-  font-size: 1.8em;
+  font-size: 1.6em;
 }
 
 .containerpelea {
@@ -243,7 +256,7 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 }
 
 .containerpelea .containerpelea__text .containerpelea__p {
-  font-size: 1.8em;
+  font-size: 1.6em;
 }
 
 .containerpelea .containerpelea__boximg {
@@ -264,7 +277,7 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 }
 
 .containerpelea .containerpelea__boximg .containerpelea__img {
-  width: 100%;
+  width: 80%;
   margin: 20px;
   border: 6px solid #71163b36;
   border-radius: 60px;
@@ -315,7 +328,7 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 }
 
 .containerestatua .containerestatua__text .containerestatua__p {
-  font-size: 1.8em;
+  font-size: 1.6em;
 }
 
 .containerestatua .containerestatua__boximg {
@@ -336,7 +349,7 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 }
 
 .containerestatua .containerestatua__boximg .containerestatua__img {
-  width: 80%;
+  width: 70%;
   margin: 20px;
   border: 6px solid #71163b36;
   border-radius: 60px;
@@ -346,7 +359,7 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 .bannerMiembros {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(7%, black), color-stop(70%, rgba(0, 0, 0, 0))), url(../media/banner/bannerMiembros.gif);
   background: linear-gradient(black 7%, rgba(0, 0, 0, 0) 70%), url(../media/banner/bannerMiembros.gif);
-  height: 100vh;
+  height: 92.7vh;
   background-position: bottom;
   background-size: cover;
   -webkit-filter: grayscale(20%);
@@ -357,14 +370,14 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 .bannerHistoria {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(7%, black), color-stop(70%, rgba(0, 0, 0, 0))), url(../media/banner/bannerHistoria.png);
   background: linear-gradient(black 7%, rgba(0, 0, 0, 0) 70%), url(../media/banner/bannerHistoria.png);
-  height: 100vh;
+  height: 92.7vh;
   background-position: bottom;
   background-size: cover;
   -webkit-filter: grayscale(40%);
           filter: grayscale(40%);
 }
 
-#historia {
+.historia__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -375,7 +388,7 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
           justify-content: space-evenly;
 }
 
-#historia .historia__block--title {
+.historia__container .historia__block--title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -384,60 +397,34 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
           justify-content: center;
   color: #743644;
   font-size: 2em;
+  margin-bottom: 20px;
 }
 
-#historia .historia__block1 {
+.historia__container .historia__block {
   width: 30%;
   padding: 30px;
   margin: 10px;
-  background: #2c2e34;
+  background: #1c1c1c;
   border-radius: 40px;
   font-family: "Oswald", sans-serif;
 }
 
-#historia .historia__block1 .historia__block--text1 {
+.historia__container .historia__block .historia__block_img {
+  width: 100%;
+  border: 3px solid #777;
+}
+
+.historia__container .historia__block .historia__block--text {
   color: #e7e8e9;
   font-size: 1.4em;
-}
-
-#historia .historia__block2 {
-  width: 30%;
-  padding: 30px;
-  margin: 10px;
-  background: #2c2e34;
-  border-radius: 40px;
-  font-family: "Oswald", sans-serif;
-}
-
-#historia .historia__block2 .historia__block--text2 {
-  color: #e7e8e9;
-  font-size: 1.4em;
-}
-
-#historia .historia__block3 {
-  width: 30%;
-  padding: 30px;
-  margin: 10px;
-  background: #2c2e34;
-  border-radius: 40px;
-  font-family: "Oswald", sans-serif;
-}
-
-#historia .historia__block3 .historia__block--text3 {
-  color: #e7e8e9;
-  font-size: 1.4em;
-}
-
-#carrousel {
-  background: #2b2f38;
-  margin-bottom: 30px;
+  margin-top: 10px;
 }
 
 /* GALERIA */
 .bannerGaleria {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(7%, black), color-stop(70%, rgba(0, 0, 0, 0))), url(../media/banner/bannerGaleria.jpg);
   background: linear-gradient(black 7%, rgba(0, 0, 0, 0) 70%), url(../media/banner/bannerGaleria.jpg);
-  height: 100vh;
+  height: 92.7vh;
   background-position: center;
   background-size: cover;
   -webkit-filter: grayscale(20%);
@@ -482,7 +469,7 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 .bannerUnirse {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(7%, black), color-stop(70%, rgba(0, 0, 0, 0))), url(../media/banner/bannerUnirse.png);
   background: linear-gradient(black 7%, rgba(0, 0, 0, 0) 70%), url(../media/banner/bannerUnirse.png);
-  height: 100vh;
+  height: 92.7vh;
   background-position: bottom;
   background-size: cover;
 }
@@ -645,33 +632,19 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
 }
 
 /* MEDIA QUERIES */
-@media (min-width: 300px) and (max-width: 768px) {
-  .containerinicio .containerinicio__text {
-    width: 100%;
-  }
-  .containerinicio .containerinicio__video {
-    width: 90%;
-  }
-  .containerpelea .containerpelea__text {
-    width: 90%;
-  }
-  .containerpelea .containerpelea__boximg {
-    width: 100%;
-  }
-  .containerestatua .containerestatua__boximg {
-    width: 100%;
-  }
-  .containerestatua .containerestatua__text {
-    width: 90%;
-  }
-  footer .footercontent .footercontent__socials .footercontent__list {
-    margin: 0px 2em;
-  }
+@media (min-width: 50px) and (max-width: 576px) {
+  /* INICIO */
   .containerinicio {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .containerinicio .containerinicio__text {
+    width: 100%;
+  }
+  .containerinicio .containerinicio__video {
+    width: 90%;
   }
   .containerpelea {
     -webkit-box-orient: vertical;
@@ -679,11 +652,55 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .containerpelea .containerpelea__text {
+    width: 90%;
+  }
+  .containerpelea .containerpelea__boximg {
+    width: 100%;
+  }
+  .containerpelea .containerpelea__boximg .containerpelea__img {
+    width: 90%;
+  }
   .containerestatua {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .containerestatua .containerestatua__boximg {
+    width: 100%;
+  }
+  .containerestatua .containerestatua__boximg .containerestatua__img {
+    width: 90%;
+  }
+  .containerestatua .containerestatua__text {
+    width: 90%;
+  }
+  /* HISTORIA */
+  .historia__container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 0vh;
+  }
+  .historia__container .historia__block {
+    width: 80%;
+    margin: 80px auto -50px auto;
+  }
+  .footercontent__socials {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footercontent__socials .footercontent__list {
+    margin: 0px 2em;
+  }
+  .navbar-brand {
+    display: none;
   }
   .backgroundunirse #form {
     width: 520px;
@@ -706,28 +723,104 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
   .backgroundunirse #form {
     width: 730px;
   }
-  #historia {
-    margin-bottom: 10vh;
+  .backgroundGaleria .containergaleria .containergaleria__img {
+    width: 530px;
+  }
+  .titlegaleria .titlegaleria__text {
+    font-size: 3.5em;
+  }
+  .backgroundGaleria .containergaleria {
+    width: 100%;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  /* INICIO */
+  .containerinicio {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  #historia .historia__block1 {
-    width: 90%;
-    margin: 15px;
+  .containerinicio .containerinicio__text {
+    width: 100%;
   }
-  #historia .historia__block2 {
+  .containerinicio .containerinicio__video {
     width: 90%;
-    margin: 15px;
   }
-  #historia .historia__block3 {
+  .containerpelea {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .containerpelea .containerpelea__text {
     width: 90%;
-    margin: 15px;
-    padding: 40px;
   }
-  p {
-    margin-bottom: 0rem;
+  .containerpelea .containerpelea__boximg {
+    width: 100%;
+  }
+  .containerpelea .containerpelea__boximg .containerpelea__img {
+    width: 90%;
+  }
+  .containerestatua {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .containerestatua .containerestatua__boximg {
+    width: 100%;
+  }
+  .containerestatua .containerestatua__boximg .containerestatua__img {
+    width: 90%;
+  }
+  .containerestatua .containerestatua__text {
+    width: 90%;
+  }
+  /* HISTORIA */
+  .historia__container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 0vh;
+  }
+  .historia__container .historia__block {
+    width: 80%;
+    margin: 80px auto -50px auto;
+  }
+  .footercontent__socials {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .footercontent__socials .footercontent__list {
+    margin: 0px 2em;
+  }
+  .backgroundunirse #form {
+    width: 520px;
+    margin: 0px;
+  }
+  .backgroundunirse #form .form__container {
+    display: block;
+  }
+  .backgroundunirse #form .form__container .form__block1 {
+    padding-right: 9px;
+  }
+  .backgroundunirse {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .backgroundunirse #form {
+    width: 730px;
   }
   .backgroundGaleria .containergaleria .containergaleria__img {
     width: 530px;
@@ -741,32 +834,18 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
 }
 
 @media (min-width: 768px) and (max-width: 992px) {
-  .containerinicio .containerinicio__text {
-    width: 100%;
-  }
-  .containerinicio .containerinicio__video {
-    width: 90%;
-  }
-  .containerpelea .containerpelea__text {
-    width: 90%;
-  }
-  .containerpelea .containerpelea__boximg {
-    width: 100%;
-  }
-  .containerestatua .containerestatua__boximg {
-    width: 100%;
-  }
-  .containerestatua .containerestatua__text {
-    width: 90%;
-  }
-  footer .footercontent .footercontent__socials .footercontent__list {
-    margin: 0px 2em;
-  }
+  /* INICIO */
   .containerinicio {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .containerinicio .containerinicio__text {
+    width: 100%;
+  }
+  .containerinicio .containerinicio__video {
+    width: 90%;
   }
   .containerpelea {
     -webkit-box-orient: vertical;
@@ -774,11 +853,41 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .containerpelea .containerpelea__text {
+    width: 90%;
+  }
+  .containerpelea .containerpelea__boximg {
+    width: 100%;
+  }
   .containerestatua {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .containerestatua .containerestatua__boximg {
+    width: 100%;
+  }
+  .containerestatua .containerestatua__text {
+    width: 90%;
+  }
+  .footercontent__list {
+    margin: 0px 2em;
+  }
+  /* HISTORIA */
+  .historia__container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 0vh;
+  }
+  .historia__container .historia__block {
+    width: 80%;
+    margin: 80px auto -50px auto;
   }
   .form__block1--controls {
     width: 90%;
@@ -789,76 +898,20 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
   .backgroundunirse #form {
     width: 730px;
   }
-  #historia {
-    margin-bottom: 10vh;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  #historia .historia__block1 {
-    width: 90%;
-    margin: 30 auto 10 auto;
-  }
-  #historia .historia__block2 {
-    width: 90%;
-    margin: 30 auto 10 auto;
-  }
-  #historia .historia__block3 {
-    width: 90%;
-    margin: 30 auto 10 auto;
-    padding: 40px;
-  }
-  p {
-    margin-bottom: 0rem;
-  }
-  .backgroundGaleria .containergaleria .containergaleria__img {
-    width: 680px;
-  }
 }
 
 @media (min-width: 992px) and (max-width: 1200px) {
-  .containerinicio .containerinicio__text {
-    width: 100%;
-  }
-  .containerinicio .containerinicio__video {
-    width: 90%;
-  }
-  .containerpelea .containerpelea__text {
-    width: 90%;
-  }
-  .containerpelea .containerpelea__boximg {
-    width: 100%;
-  }
-  .containerestatua .containerestatua__boximg {
-    width: 100%;
-  }
-  .containerestatua .containerestatua__text {
-    width: 90%;
-  }
-  footer .footercontent .footercontent__socials .footercontent__list {
-    margin: 0px 2em;
-  }
-  #historia .historia__block1 {
-    width: 360px;
-  }
-  #historia .historia__block2 {
-    width: 360px;
-  }
-  #historia .historia__block3 {
-    width: 360px;
-  }
-  p {
-    margin-bottom: 0rem;
-  }
-  .backgroundGaleria .containergaleria .containergaleria__img {
-    width: 510px;
-  }
   .containerinicio {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .containerinicio .containerinicio__text {
+    width: 100%;
+  }
+  .containerinicio .containerinicio__video {
+    width: 90%;
   }
   .containerpelea {
     -webkit-box-orient: vertical;
@@ -866,11 +919,26 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .containerpelea .containerpelea__text {
+    width: 90%;
+  }
+  .containerpelea .containerpelea__boximg {
+    width: 100%;
+  }
   .containerestatua {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .containerestatua .containerestatua__boximg {
+    width: 100%;
+  }
+  .containerestatua .containerestatua__text {
+    width: 90%;
+  }
+  .footercontent__list {
+    margin: 0px 2em;
   }
 }
 /*# sourceMappingURL=estilos.css.map */
